Added references to the Ctrl app

--- a/src/pug/alpakka.pug
+++ b/src/pug/alpakka.pug
@@ -24,10 +24,10 @@ block page
         div More images and videos ->
 
     div.box
-      h2 Zero software
+      h2 No bloat software
       p: i "Gaming peripherals and bloatware apps, name a more iconic duo"
-      p No drivers, #[em no apps], no overlays, no bloat. The Alpakka firmware emulates as a standard keyboard, mouse, and Xinput gamepad at hardware level; so it just works out of the box in Windows and Linux, and every game launcher.
-      p Instead of having per-game configurations, the firmware includes #[+a('alpakka/manual/profiles') 8 profiles] carefully crafted for different game genres, that can be switched directly on the controller (for example: FPS, racing, flight).
+      p No drivers, no overlays, no bloat. The Alpakka firmware emulates as a standard keyboard, mouse, and Xinput gamepad at hardware level; so it just works out of the box in Windows and Linux, and every game launcher.
+      p Instead of having per-game configurations, the firmware includes #[+a('alpakka/manual/profiles') per-genre profiles], which are also editable in an optional configuration app: #[+a('alpakka/manual/ctrl_app') Ctrl app] (Work in progress).
 
 
     div.box.image.colored(style='border-radius:10px')
