--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -43,6 +43,7 @@ block page
           +wikilink('mouse') Mouse
           +wikilink('tune') Tune settings
           +wikilink('calibrate') Calibrate
+          +wikilink('ctrl_app') Ctrl app
 
         h3 Profiles
         div
