--- a/src/pug/alpakka/manual/dev_profiles.pug
+++ b/src/pug/alpakka/manual/dev_profiles.pug
@@ -7,7 +7,7 @@ block content
   h2 Modify profiles
   hr
 
-  p We are working in a simple method to create and load profiles via USB, without the need to recompile the firmware, but at the moment the only way to edit profiles is to change the source code.
+  p We are working in a simple method to modify profile on the #[+a('ctrl_app') Ctrl app], without the need to recompile the firmware, but at the moment the only way to edit profiles is to change the source code.
   p Meanwhile profiles are just C code located in the #[+ax('https://github.com/inputlabs/alpakka_firmware/tree/main/src/profiles') profiles/] folder, each profile in a single file containing a #[em Profile] object. And the profile having its buttons defined, a #[em Button] object for each button.
   p The parameters of the #[em Button] object are:
   ul
