--- a/src/pug/alpakka/manual/firmware.pug
+++ b/src/pug/alpakka/manual/firmware.pug
@@ -9,8 +9,16 @@ block content
 
   h3 Get latest firmware
   p The software embedded in the controller can be easily updated to get new features and fixes. Latest builds of the firmware #[em .uf2 files] are located in the Firmware repository #[+ax('https://github.com/inputlabs/alpakka_firmware/releases/latest') Releases].
+  hr
 
-  h3 Install / Update the firmware
+  h3 Install the firmware for first time
+  ul
+    li Connect the controller to a PC with a cable.
+    li In your computer file explorer, drag the #[em .uf2] file into the RPI-RP2 drive.
+    li The controller should restart itself, and the front LEDs will blink.
+  hr
+
+  h3 Update the firmware
   ul
     li Connect the controller to a PC with a cable, and let it start normally.
     li Hold #[em Home #[+home]] button.
@@ -19,10 +27,12 @@ block content
       div After LEDs are turned off, release all buttons.
       img(src='/static/manual/led_off.png' width='50px')
     li Notice how the controller is now in #[em Boot mode], and will show up as #[em RPI-RP2] drive in your computer.
-    li In your computer, drag the #[em .uf2] file into the RPI-RP2 drive.
-    li Notice how the controller restarted itself, and the new firmware is already installed.
-    li If necessary, #[+a('calibrate') Calibrate] the controller.
+    li In your computer file explorer, drag the #[em .uf2] file into the RPI-RP2 drive.
+    li The controller should restart itself, and the front LEDs will blink.
   hr
+
+  h3 After the installation
+  p If necessary, #[+a('calibrate') Calibrate] the controller.
 
   h3 Modify the firmware
   p Check the #[+a('dev') Developer] section.
