Added 10 more games to the accessibility database

--- a/src/pug/db/_db.pug
+++ b/src/pug/db/_db.pug
@@ -21,16 +21,19 @@ block page
         h3 Games
         div
           +wikilink('apex_legends') Apex Legends
+          +wikilink('battlebit_remastered') Battlebit: Remastered
           +wikilink('battlefield_4') Battlefield 4
           +wikilink('borderlands_3') Borderlands 3
           +wikilink('bullets_per_minute') Bullets Per Minute
-          +wikilink('control') Control
           +wikilink('warzone_2') Call of Duty: Warzone 2
+          +wikilink('control') Control
+          +wikilink('counter_strike_2') Counter-Strike 2
           +wikilink('days_gone') Days Gone
           +wikilink('deep_rock_galactic') Deep Rock Galactic
           +wikilink('dishonored_2') Dishonored 2
           +wikilink('doom_2016') Doom (2016)
           +wikilink('elden_ring') Elden Ring
+          +wikilink('everspace_2') Everspace 2
           +wikilink('far_cry_5') Far Cry 5
           +wikilink('fortnite') Fortnite
           +wikilink('ghostrunner') Ghostrunner
@@ -39,19 +42,26 @@ block page
           +wikilink('horizon_zero_dawn') Horizon Zero Dawn
           +wikilink('hunt_showdown') Hunt: Showdown
           +wikilink('insurgency_sandstorm') Insurgency: Sandstorm
+          +wikilink('ion_fury') Ion Fury
+          +wikilink('minecraft_bedrock') Minecraft (Bedrock edition)
           +wikilink('mirrors_edge') Mirror's Edge
+          +wikilink('necromunda') Necromunda: Hired Gun
           +wikilink('neon_white') Neon White
           +wikilink('no_mans_sky') No Man's Sky
           +wikilink('noita') Noita
           +wikilink('portal_2') Portal 2
           +wikilink('prodeus') Prodeus
           +wikilink('pubg') PUBG: Battlegrounds
+          +wikilink('quake_2_2023') Quake II (2023)
           +wikilink('rainbow_six_siege') Rainbow Six Siege
+          +wikilink('returnal') Returnal
           +wikilink('risk_of_rain_2') Risk of Rain 2
-          +wikilink('superhot_mcd') Superhot: Mind Control Delete
           +wikilink('skyrim') The Elder Scrolls V: Skyrim
+          +wikilink('superhot_mcd') Superhot: Mind Control Delete
+          +wikilink('teardown') Teardown
           +wikilink('the_witcher_3') The Witcher 3
           +wikilink('titanfall_2') Titanfall 2
+          +wikilink('warframe') Warframe
 
     div.box.entry
       block content
