--- a/src/pug/db/_format.pug
+++ b/src/pug/db/_format.pug
@@ -142,4 +142,4 @@ div.mosaic
   //-       +feature('', fps.walkRunToggle) Walk/run toggle
 
 hr
-p You can make additions to the list of games with this #[+ax('https://forms.gle/SSUUPPLCkB4PC82B8') Google form], or by doing a pull requests directly into Input Labs #[+ax('https://github.com/inputlabs/website') Website repository].
+p You can submit entries for more games with this #[+ax('https://forms.gle/SSUUPPLCkB4PC82B8') Google form], or by doing a pull requests directly into Input Labs #[+ax('https://github.com/inputlabs/website') Website repository].
