Added progress report 17

--- a/src/pug/blog/report_16.pug
+++ b/src/pug/blog/report_16.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #16
-  +news_header('1 September 2023', 'report_15', '')
+  +news_header('1 September 2023', 'report_15', 'report_17')
 
   h3 New firmware version with racing profile
   p The racing profile is finally here in the firmware release #[+ax(org.fw_release+'0.91.0') f0.91.0] of the Alpakka firmware, the details about mappings and its features are in the #[+a('/alpakka/manual/profile_racing') Racing profile] section of the manual.
