--- a/src/pug/blog/reports_all.pug
+++ b/src/pug/blog/reports_all.pug
@@ -8,6 +8,7 @@ block content
   hr
 
   ul
+    li: +a('report_17') Progress report 17
     li: +a('report_16') Progress report 16
     li: +a('report_15') Progress report 15
     li: +a('report_14') Progress report 14
