--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,11 +31,11 @@ block page
       h2 Right to repair
       p Something broke? worry not, just replace the faulty part with a new one.
       p We design hardware for #[em easy DIY] (Do-It-Yourself) and for you to exercise your Right-to-Repair anytime.
-      p Everything is open, everything is as simple as it can be, just take an solder iron and you are ready to go.
+      p Everything is open, everything is as simple as it can be, just take a soldering iron and you are ready to go.
 
     div.box
       h2 We are actual gamers
-      p Thousands of hours playing videogames, that's our secret sauce for creating awesome controllers. Popular games or niche games, we play both.
+      p Thousands of hours playing video games, that's our secret sauce for creating awesome controllers. Popular games or niche games, we play both.
       p Our devices are not designed by committee, nor the result of market studies to maximize profitability.
       p We stand behind our work, and use our own controllers everyday. #[em We are passionate about them], and we hope to share that passion with you.
 
