--- a/src/pug/blog/wireless_alpakka.pug
+++ b/src/pug/blog/wireless_alpakka.pug
@@ -22,7 +22,7 @@ block content
   h4 2.2 Recharging
 
   h3 3. Communication
-  p using existing standards, i.e. BT, WLAN, Nordic
+  p Using existing standards, i.e. BT, WLAN, Nordic
 
   h4 3.1 Bluetooth
   h5 Versions
