Initial progress report 18

--- a/src/pug/blog/report_17.pug
+++ b/src/pug/blog/report_17.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #17
-  +news_header('6 October 2023', 'report_16', '')
+  +news_header('6 October 2023', 'report_16', 'report_18')
 
   h3 Ctrl app
   p We released firmware #[+ax(org.fw_release+'0.92.0') 0.92.0] along the new #[+ax('https://github.com/inputlabs/ctrl') Ctrl app source code] for the Alpakka controller. A minimalistic app was the best approach to address the feedback from the community, and to have a simpler way to modify profiles. The app is aligned with Input Labs principles, so it is completely #[em optional], #[em open-source], and #[em multi-platform].
