Initial progress report 18

--- a/src/pug/blog/report_18.pug
+++ b/src/pug/blog/report_18.pug
@@ -19,6 +19,7 @@ block content
   h3 New colors
   p Some people were not satisfied with the selection of filament colors we are offering.
   p We are thus adding the #[+ax('https://www.prusa3d.com/product/prusament-pla-prusa-orange-1kg/') Prusa Orange] option. We are also replacing the #[+ax('https://www.prusa3d.com/product/prusament-pla-pineapple-yellow-1kg/') Pineaple Yellow] with the#[+ax('https://www.prusa3d.com/product/prusament-pla-oh-my-gold-blend-970g/') Oh My Gold Blend] and the #[+ax('https://www.prusa3d.com/product/prusament-pla-lipstick-red-1kg/') Lipstick Red from Prusa] with #[+ax('https://www.redline-filament.com/products/pla-glitzer-rot') Glitter Red from REDLINE FILAMENT].
+  p We hope that you like the result:
   br
   img(src='/static/blog/colors2c.jpg').wm
   
