Added IGDA link

--- a/src/pug/blog/report_18.pug
+++ b/src/pug/blog/report_18.pug
@@ -26,7 +26,7 @@ block content
   hr
 
   h3 International Game Developers Association
-  p Last month we had the opportunity to demonstrate our Alpakka at the International Game Developers Association (IDGA) meetup, here in Helsinki. The feedback from the game developer community was absolutely fabulous and our Alpakka received a lot if interest.
+  p Last month we had the opportunity to demonstrate our Alpakka at the #[+ax('https://igda.fi') International Game Developers Association (IGDA)] meetup, here in Helsinki. The feedback from the game developer community was absolutely fabulous and our Alpakka received a lot if interest.
   br
   img(src='/static/blog/IGDA.jpg').wm
   hr
