--- a/src/pug/blog/report_18.pug
+++ b/src/pug/blog/report_18.pug
@@ -7,11 +7,10 @@ block content
   h2 Progress report #18
   +news_header('17 November 2023', 'report_17', '')
 
-  h3 Fully Soldered Printed Circuit Boards
+  h3 Fully soldered Printed Circuit Boards
   p Based on feedback from our community we know that soldering components on the PCB can pose a bit of a challenge. While the soldering is very basic, and can represent a very nice learning experience, people may be afraid of making a mistake.
-  p Some people also just want the new gyro-gaming experience with the Alpakka.
-  p We have thus been experimenting with the two-sided soldering service from JLCPCB. So far the results are very promising and we expect to offer fully soldered PCBs in our distribution channel soon. This way people only need the parts, and the hex-key (which comes with the bolts-kit) to assemble their Alpakka.
-  p At least for now we will also keep the separate one-sided PCB and electronics set.
+  p We have therefore been experimenting with the two-sided soldering service from JLCPCB. So far the results are very promising and we expect to offer fully soldered PCBs in our distribution channel soon. This way people can skip the soldering and only need the parts, and the hex-key to assemble their Alpakka.
+  p At least for now we will also keep offering the separate one-sided PCB and electronics set.
   br
   img(src='/static/blog/soldered_pcb.jpg').wm
   hr
@@ -26,7 +25,7 @@ block content
   hr
 
   h3 International Game Developers Association
-  p Last month we had the opportunity to demonstrate our Alpakka at the #[+ax('https://igda.fi') International Game Developers Association (IGDA)] meetup, here in Helsinki. The feedback from the game developer community was absolutely fabulous and our Alpakka received a lot if interest.
+  p Last month we had the opportunity to demonstrate the Alpakka at the #[+ax('https://igda.fi') International Game Developers Association (IGDA)] meetup, here in Helsinki. The feedback from the game developer community was absolutely fabulous and our Alpakka received a lot if interest.
   br
   img(src='/static/blog/IGDA.jpg').wm
   hr
