Blog post for year one recap

--- a/src/pug/blog/report_18.pug
+++ b/src/pug/blog/report_18.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #18
-  +news_header('17 November 2023', 'report_17', '')
+  +news_header('17 November 2023', 'report_17', 'year_one_recap')
 
   h3 Fully soldered Printed Circuit Boards
   p Based on feedback from our community we know that soldering components on the PCB can pose a bit of a challenge. While the soldering is very basic, and can represent a very nice learning experience, people may be afraid of making a mistake.
