--- a/src/pug/blog/gyro_ratcheting.pug
+++ b/src/pug/blog/gyro_ratcheting.pug
@@ -11,12 +11,12 @@ block content
     i 8 March 2023 (amends and corrections)
   hr
 
-  h3 Introduction and disclaimer
+  h3 1. Introduction and disclaimer
   p This blog entry is an answer to the #[em frequently asked questions] about using flick stick on the Alpakka. We wrote this as a consolidation of many things we learnt while researching gyroscope-based controls, and it is a mix of data, rationales, and thoughts.
   p This topic can be sensitive and we do not wish to be confrontational, for that reason the entry is titled #[em ratcheting AND flick stick] and not #[em ratcheting VS flick stick].
   hr
 
-  h3 History of gyro aiming
+  h3 2. History of gyro aiming
   p Using angular rate sensors (also known as gyroscope, or simply gyro) as a method for camera control in videogames is relatively new. Some commercial controllers included an IMU (Inertial Measurement Unit) sensor, those were never intended as primary input method for camera control, but mostly to enable new alternative "experiences", such as for example, playing golf swinging the controller.
   p It was up to gyro enthusiasts to start trying new ways to use the gyro on their controllers, sometimes by using custom mapping based on 3rd party PC software, or even by coding custom firmware for their proprietary controllers.
   p The first approaches, #[em first generation] of gyro aiming , were as simple as using the secondary thumbstick as a standard camera control (relative turn rate) while employing the gyro for fine camera control (for example adjusting the last milli-degrees necessary for landing a headshot in a shooter). These IMU sensors were not very accurate, so they had to be configured with a very low sensitivity, so big movements translated into small in-game camera turns. One of these first implementations was #[em Uncharted: Golden Abyss] (2011) in PlayStation Vita.
@@ -41,7 +41,7 @@ block content
       td Gyro tuned with low sensitivity
   hr
 
-  h3 Gyro ratcheting
+  h3 3. Gyro ratcheting
   p Ratcheting refers to a usage situation, where the gyro is used as the only method of camera control, so the thumbstick is not used for camera control anymore. This approach requires a solution to engage and disengage the gyro, for re-centering purposes, similar to re-centering a mouse (the mouse can be lifted and re-centered while "disengaged").
 
   p But when people started experimenting with this approach, due to the limitations of current gyros, it was obvious that some tradeoffs had to be made: a low sensitivity allowed for fine aiming, but made doing large turns very difficult; on the contrary a higher sensitivity allowed for big turns, but made fine aiming very noisy and unreliable. This latest approach combined with a lot of post-processing (smoothing and acceleration) was the state-of-the-art solution for gyro ratcheting for some time.
@@ -60,7 +60,7 @@ block content
     li Requires setting in-game sensitivity within an acceptable range (1:3 to 1:5).
   hr
 
-  h3 Flick stick
+  h3 4. Flick stick
   p Flick stick is an evolution of the thumbstick+gyro parallel method, so there is still two parallel methods to control the camera, but now the thumbstick is used in a more clever way. Instead of the classic relative turn-rate control, the thumbstick external perimeter is mapped 1:1 to control the in-game horizontal axis. So for example pushing down (180°) on the thumbstick, the in-game camera also turns 180°.
   p This is a clear improvement in many scenarios, as it can be used as a fast-turn shortcut in any approximate desired angle, or can be used as a more traditional turn control by swipping the thumbstick along the perimeter, though the much higher 1:1 sensitivity makes it less accurate for this purpose.
 
@@ -77,7 +77,7 @@ block content
     li Due to the super-high sensitivity / low-resolution required on the thumbstick, flick stick method is not very good for long distance flicks based on muscle memory (See table below).
   hr
 
-  h3 Translation-to-rotation resolution table
+  h3 5. Translation-to-rotation resolution table
   p Analysis of the theoretical resolution of different devices while performing large movements, as for example, long distance flick shots.
   p * Assuming perfect mouse optics, perfect gyro sensors, and perfect thumbstick potentiometers.
   table.manual.col4
@@ -112,7 +112,7 @@ block content
     //-   td 18% as good as a mouse
   hr
 
-  h3 Parallel input methods
+  h3 6. Parallel input methods
   p "Parallel Input" refers to a situation where two different control surfaces are assigned to the same in-game action, this is not very common for games, but most people may be familiar with something similar: connecting a mouse to a laptop, so both the mouse and the laptop trackpad are able to control the mouse in parallel (at the same time).
 
   p We could argue that the body itself, and the way multiple muscles are used at the same time to perform a single action, could be considered a form of parallel input, and while true, our brains have complex "dedicated hardware" to encode and decode these movements naturally (#[+ax('https://en.wikipedia.org/wiki/Primary_motor_cortex#Movement_coding') Movement coding]). Likewise, when performing fine motion, we tend to isolate smaller groups of muscles to increase dexterity.
@@ -120,7 +120,7 @@ block content
   p Based in our experience using thumbstick+gyro aiming and overall research of motion-based controls, we found that when using parallel inputs there are multiple ways to achieve the same output results, which interferes with the ability of building muscle memory, and increases the chances of getting confused while in high-stakes situations.
   hr
 
-  h3 Focused research on gyro ratcheting
+  h3 7. Focused research on gyro ratcheting
   p At Input Labs we decided to research and develop solutions to remove the limitations of gyro #[em ratcheting as a generalist input method], compared with the shortcomings of flick stick, for all the reasons mentioned above:
   ul
     li Simplicity.
@@ -145,7 +145,7 @@ block content
       td The controller identifies itself as a HID mouse
   hr
 
-  h3 Conclusion
+  h3 8. Conclusion
   p With the current performance and simplicity of the Alpakka controller reference design, we believe we achieved the goal of making gyro ratcheting not just an enthusiast/experimental solution, but a first-class citizen for generalist input methods, which can replace mouse input in any scenario.
 
   p Several #[+a('talking_about_us') independent reviewers] and members of our #[+ax(org.discord) Discord] community agree about its exceptional characteristics, so we consider the Alpakka as the first of a #[em third generation] of gyro controllers.
