Requested PR changes

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -28,7 +28,7 @@
   const redirect = {
     db:            '/db/stats',
     contribute:    '/contribute/open_source',
-    blog:          '/blog/year_one_recap',
+    blog:          '/blog/recap_year_1',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
