--- a/src/pug/blog/report_18.pug
+++ b/src/pug/blog/report_18.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #18
-  +news_header('17 November 2023', 'report_17', 'year_one_recap')
+  +news_header('17 November 2023', 'report_17', 'recap_year_1')
 
   h3 Fully soldered Printed Circuit Boards
   p Based on feedback from our community we know that soldering components on the PCB can pose a bit of a challenge. While the soldering is very basic, and can represent a very nice learning experience, people may be afraid of making a mistake.
@@ -21,7 +21,7 @@ block content
   p We hope that you like the result:
   br
   img(src='/static/blog/colors2c.jpg').wm
-  
+
   hr
 
   h3 International Game Developers Association
@@ -29,5 +29,5 @@ block content
   br
   img(src='/static/blog/IGDA.jpg').wm
   hr
- 
+
   p Thanks a lot for the support! <br> - M&M <3
