--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -41,7 +41,7 @@ block page
           +wikilink('gyro_ratcheting') Gyro ratcheting and flick stick
           +wikilink('dual_gyro') Dual gyro
           +wikilink('finger_sensing') Finger sensing
-          //- div.inactive Early prototypes retrosp. #[i (Soon)]
+          div.inactive Addressable controllers #[i (Soon)]
 
         h3 Other
         div
