Typos and fixes

--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,7 +25,7 @@ block page
 
         h3 News
         div
-          +wikilink('year_one_recap') Year one recap
+          +wikilink('recap_year_1') Year one recap
           +wikilink('report_18') Progress report 18
           +wikilink('report_17') Progress report 17
           +wikilink('report_16') Progress report 16
