--- a/src/pug/blog/recap_year_1.pug
+++ b/src/pug/blog/recap_year_1.pug
@@ -60,7 +60,7 @@ block content
   h3 Things we hope to achieve in the second year of Input Labs
   ul
     li #[em Alpakka 1.0] with wireless power and communication.
-    li Shift our focus into into the #[em Kapybara] development.
+    li Shift our focus into the #[em Kapybara] development.
     li Additional #[em Ctrl app] features (profile edit, advanced settings, etc).
     li Re-think our approach of the #[em testers program].
     li Find alternative ways to #[em support our research], such as external investment, partnerships with other companies, governmental support, etc...
