--- a/src/pug/blog/recap_year_1.pug
+++ b/src/pug/blog/recap_year_1.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Year one recap
-  +news_header('22 November 2023', 'report_18', '')
+  +news_header('22 November 2023', 'report_18', 'report_19')
 
   p One year ago Input Labs went live. It is time to review our achievements and lessons learnt.
 
