--- a/src/pug/blog/report_19.pug
+++ b/src/pug/blog/report_19.pug
@@ -38,10 +38,11 @@ block content
   hr
 
   h3 Bug tracking 
-  p Something we have not been exercising consistently is the tracking of bugs. In order to a) do better ourselves and b) enable others to contribute more easily, you can find open issues in their corresponding repositories (e.g., #[+ax('https://github.com/inputlabs/alpakka_firmware/issues') firmware[]).
+  p Something we have not been exercising consistently is the tracking of bugs. In order to a) do better ourselves and b) enable others to check, or even to contribute more easily, you can find open issues in their corresponding repositories (e.g., #[+ax('https://github.com/inputlabs/alpakka_firmware/issues') firmware[]).
 
   hr
 
   p Enjoy the winter solstice celebrations!
 
   p - Marcos and Michael <3
+  
