--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -15,6 +15,8 @@
     repos: 'https://github.com/orgs/inputlabs/repositories?sort=name',
     fw_releases: 'https://github.com/inputlabs/alpakka_firmware/releases/',
     fw_release: 'https://github.com/inputlabs/alpakka_firmware/releases/tag/',
+    ctrl_releases: 'https://github.com/inputlabs/ctrl/releases/',
+    ctrl_release: 'https://github.com/inputlabs/ctrl/releases/tag/',
     cad_releases: 'https://github.com/inputlabs/alpakka_case/releases/',
     cad_release: 'https://github.com/inputlabs/alpakka_case/releases/tag/',
     roadmap: 'https://github.com/orgs/inputlabs/projects/2',
