Updated references to profile edit pointing to the ctrl app

--- a/src/pug/alpakka.pug
+++ b/src/pug/alpakka.pug
@@ -27,7 +27,7 @@ block page
       h2 No bloat software
       p: i "Gaming peripherals and bloatware apps, name a more iconic duo"
       p No drivers, no overlays, no bloat. The Alpakka firmware emulates as a standard keyboard, mouse, and Xinput gamepad at hardware level; so it just works out of the box in Windows and Linux, and every game launcher.
-      p Instead of having per-game configurations, the firmware includes #[+a('alpakka/manual/profiles') per-genre profiles], which are also editable in an optional configuration app: #[+a('alpakka/manual/ctrl_app') Ctrl app] (Work in progress).
+      p Instead of having per-game configurations, the firmware includes #[+a('alpakka/manual/profiles') per-genre profiles], which are also editable in an optional configuration app: #[+a('alpakka/manual/ctrl_app') Ctrl app].
 
 
     div.box.image.colored(style='border-radius:10px')
@@ -55,7 +55,7 @@ block page
         li #[+done(1)] 3D-printed prototypes.
         li #[+done(1)] Closed alpha testing (5 testers).
         li #[+done(1)] Reference designs.
-        li #[+done(0)] More built-in profiles / Edit profiles.
+        li #[+done(1)] Edit profiles.
         li #[+done(0)] Wireless.
         li #[+done(0)] Vibration.
 
