--- a/src/pug/alpakka/components.pug
+++ b/src/pug/alpakka/components.pug
@@ -31,8 +31,11 @@ block page
           td Alpakka PCB ready-to-order files
           td: +ax('https://github.com/inputlabs/alpakka_pcb/releases/latest') GitHub
         tr
-          td Alpakka PCB with soldered SMD components.
+          td Alpakka PCB (Partially soldered)
           td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb') Input Labs shop
+        tr
+          td Alpakka PCB (Fully soldered)
+          td: +ax('https://inputlabs.squarespace.com/everyone/p/alpakka-pcb-soldered') Input Labs shop
 
     div.box
       h2 Case and buttons
@@ -69,7 +72,6 @@ block page
         tr
           td Protopasta PLA Conductive
           td: +ax('https://www.proto-pasta.com/collections/conductive/products/conductive-pla') Protopasta shop
-
 
     div.box
       h2 Electronics
