--- a/src/pug/alpakka/manual/calibrate.pug
+++ b/src/pug/alpakka/manual/calibrate.pug
@@ -5,12 +5,12 @@ block append title
 
 block content
   h2 Calibrate
-  hr
 
+  hr
   h3 What is calibration
   p The thumbstick X/Y axis potentiometers, and the angular rate sensor (gyro), are components that require calibration at least once to be #[em perfectly centered and accurate]. Otherwise its analog electrical signal could be misinterpreted and assigned wrong values.
-  hr
 
+  hr
   h3 When to calibrate
   ul
     li The very first time the controller is used.
@@ -18,9 +18,14 @@ block content
     li If the thumbstick output is not centered (eg: your character keeps moving when you are not touching the thumbstick).
     li If the gyro output is not centered (eg: mouse cursor keeps moving in a particular direction when the controller is held still).
     li Approximately each 1000 hours of use.
-  hr
 
-  h3 To start the calibration procedure
+  hr
+  h3 How to calibrate in the Ctrl app
+
+  img.wm.mr.mt(src='/static/manual/ctrl_app_calibrate.png')
+
+  hr
+  h3 How to calibrate directly in the controller
   ul
     li Leave the thumbstick in its most natural centered position.
     li Put the controller resting on a flat surface.
