--- a/src/pug/alpakka/manual/ctrl_app.pug
+++ b/src/pug/alpakka/manual/ctrl_app.pug
@@ -7,11 +7,10 @@ block content
   h2 Ctrl app
   hr
   p An #[em optional] app for Input Labs devices, able to run diagnostics, configure the controller settings, and modify profile mappings.
-  p The app is hosted at #[+ax('http://ctrl.inputlabs.io') ctrl.inputlabs.io] and it is compatible with Windows, Linux and the Steam Deck; without the need to install any additional software in your computer.
+  p The app is hosted at #[+ax('http://ctrl.inputlabs.io') ctrl.inputlabs.io] and it is compatible with Windows, Linux and the Steam Deck; without the need to install any additional software in your computer (but it must be used with a WebUSB compatible browser).
+  p The source code is available at #[+ax(org.repo+'ctrl') GitHub] and it is open source.
   p Some features are missing since the application is still under active development.
-  p &nbsp;
 
-  img.wm.mr(src='/static/manual/ctrl_app_screenshot_1.png')
-  img.wm.mr(src='/static/manual/ctrl_app_screenshot_2.png')
+  img.wm.mr.mt(src='/static/manual/ctrl_app_logs.png')
 
-
+  img.wm.mr.mt(src='/static/manual/ctrl_app_profiles.png')
