--- a/src/pug/alpakka/manual/profiles.pug
+++ b/src/pug/alpakka/manual/profiles.pug
@@ -82,8 +82,5 @@ block content
   hr
 
   h3 Create or edit profiles
-  p While most of people won't need to tinker with profiles, we understand that some players will have to, either because physical constrains or because very specific niche games.
-  p We are still developing the #[+a('ctrl_app') Ctrl app] in which profiles can be modified. Meanwhile another way to tweak profiles is to edit and compile the firmware yourself. See #[+a('dev_profiles') Modify Profiles] page.
-  p Also please remember you can #[+a('/contribute') Contribute] with Input Labs, and help us developing these.
-  p Alternatively, the Steam input configurator UI can also be used to remap controls.
+  p While most of people won't need to tinker with profiles, we understand that some players will have to, either because physical constrains or because very specific niche games. So we made possible to edit profiles directly in the #[+a('ctrl_app') Ctrl app].
 
