--- a/src/pug/blog/report_19.pug
+++ b/src/pug/blog/report_19.pug
@@ -21,7 +21,7 @@ block content
   p In addition to some minor improvements and fixes, this version provides the ability to #[em edit profiles conveniently in the app] and have changes immediately stored and reflected in the Alpakka.
 
   br
-  img(src='/static/manual/ctrl_app_screenshot_3.png').wm
+  img(src='/static/manual/ctrl_app_profiles.png').wm
 
   hr
   h3 Wireless communication progress
@@ -37,7 +37,7 @@ block content
 
   hr
   h3 Bug tracking
-  p Something we have not been exercising consistently is the tracking of pending tasks and bugs at individual repositories level. So now we are now doing a bit better:
+  p Something we have not been exercising consistently is the tracking of pending tasks and bugs at individual repositories level. So now we are doing a bit better:
   ul
     li: +ax('https://github.com/inputlabs/alpakka_firmware/issues') Alpakka firmware open issues
     li: +ax('https://github.com/inputlabs/ctrl/issues') Ctrl app open issues
@@ -45,6 +45,6 @@ block content
   p This is not only making our lifes easier (so we do not have to rememeber all of that), but makes the project much more transparent, and easy for anyone to check the status of features and bugs, to comment, or even to contribute.
 
   hr
-  p Enjoy the winter solstice celebrations!
+  p Enjoy the solstice celebrations!
 
   p - Marcos and Michael <3
