--- a/src/pug/contribute/open_source.pug
+++ b/src/pug/contribute/open_source.pug
@@ -36,10 +36,13 @@ block page
       true
     )
 
-    div.box
-      h2 Feedback
-      p Input Labs is a #[em community-driven] effort, so you make us all better by simply using our stuff, and sharing your feedback and ideas with the other members.
-      p Join our #[+ax(org.discord) Discord] server and take part in technical or casual discussions.
+    +boximglink(
+      '/static/community/repo_ctrl.png',
+      org.repo+'ctrl',
+      'Ctrl app',
+      true,
+      true
+    )
 
     div.box
       h2 Become a tester
