Changed tester page, removed references from everywhere except progress reports

--- a/src/pug/alpakka/manual/faq.pug
+++ b/src/pug/alpakka/manual/faq.pug
@@ -68,10 +68,7 @@ block content
   hr
 
   +h3id('test') Can I get a free controller?
-  p There are 2 ways to get a free controller made by us:
-  ul
-    li If you run or work for a Youtube channel, website, or similar; and you want to review our devices. See #[+a('/blog/hardware_review') Get hardware for review].
-    li If you want to become a tester. See #[+a('/blog/hardware_testing') Becoming a tester].
+  p If you run or work for a Youtube channel, website, or similar; and you want to review our devices. See #[+a('/blog/hardware_review') Get hardware for review].
   hr
 
   +h3id('cost') How much would it cost to build my own controller?
