--- a/src/pug/blog/hardware_testing.pug
+++ b/src/pug/blog/hardware_testing.pug
@@ -7,9 +7,9 @@ block content
   h2 Become a tester
   hr
 
-  p It is possible to become an #[em official Input Labs tester], provide useful feedback on current designs and prototypes, and influence development decisions with your ideas.
+  p At present Input Labs cannot accept additional testers.
 
-  p If necessary, Input Labs #[em may ship hardware directly to testers].
+  p The following information is merely for reference
 
   h3 Criteria and expectations
   ul
@@ -32,5 +32,4 @@ block content
     li Please understand that our resources are limited, and getting free hardware is not guaranteed.
     li Devices should be returned to Input Labs if requested.
     li Testing hardware comes without any kind of warranty, nor responsibility for damages.
-
-  p Apply to join the tester program: #[+ax('https://forms.gle/zDeFn5owXuRKTFDh9') Join tester program].
+    
