--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,6 +10,13 @@ block content
   hr
 
   ul
+    li #[+ax('https://www.youtube.com/watch?v=xxRa807g54Q') RambleCan] #[em (video)] Remap All The Things!【Ctrl App / Alpakka Dual Gyro Controller】
+    ul
+      li: i "This was one of my major frustrations, just not being able to remap things easily on the controller"
+      li: i "Easy-peasy, I was able top switch it"
+      li: i "It updates automatically, which is pretty cool"
+      li: i "The big gripe I had about the controller: gone"
+
     li #[+ax('https://www.youtube.com/watch?v=h1B6Xp8s_Jc') Oregon Pacifist] #[em (video)] Input Labs "Alpakka" Controller Review (3D Printed & Open Source)
     ul
       li: i "This controller will make you rethink what's possible in controllers"
