Added three perimeters for wheel

--- a/src/pug/alpakka/manual/diy_case.pug
+++ b/src/pug/alpakka/manual/diy_case.pug
@@ -115,6 +115,8 @@ block content
       td
         div 0.15mm layer height.
         div Secondary color.
+        div Three perimeters.
+
     tr
       td: +preview('/static/manual/print_abxy.png')
       td ABXY buttons
