--- a/src/pug/blog/report_19.pug
+++ b/src/pug/blog/report_19.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Progress report #19
-  +news_header('22 December 2023', 'recap_year_1', '')
+  +news_header('22 December 2023', 'recap_year_1', 'patents')
 
   h3 Now in shop: Fully soldered Printed Circuit Boards
   p As mentioned in the previous progress report, we now offer also #[+ax(org.shop+'/everyone/p/alpakka-pcb-soldered') fully soldered PCBs] in our distribution channel.
