--- a/src/pug/blog/_blog.pug
+++ b/src/pug/blog/_blog.pug
@@ -25,6 +25,7 @@ block page
 
         h3 News
         div
+          +wikilink('patents') Patents, a necessary evil
           +wikilink('report_19') Progress report 19
           +wikilink('recap_year_1') Year one recap
           +wikilink('report_18') Progress report 18
