--- a/src/pug/blog/patents.pug
+++ b/src/pug/blog/patents.pug
@@ -5,7 +5,7 @@ block append subtitle
 
 block content
   h2 Patents, a necessary evil
-  +news_header('8 January 2024', 'report_19', '')
+  +news_header('8 January 2024', 'report_19', 'report_20')
 
   p In Input Labs we believe in transparency, open-source, and customer’s right to repair. We are also aware that patents are a complicated and controversial topic, so we want to address our community and explain our approach to intellectual property to avoid future misconceptions:
 
