--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -30,7 +30,7 @@
   const redirect = {
     db:            '/db/stats',
     contribute:    '/contribute/open_source',
-    blog:          '/blog/patents',
+    blog:          '/blog/report_20',
     alpakkaManual: '/alpakka/manual/mouse',
   }
 
