--- a/src/pug/blog/hardware_testing.pug
+++ b/src/pug/blog/hardware_testing.pug
@@ -9,7 +9,7 @@ block content
 
   p At present Input Labs cannot accept additional testers.
 
-  p The following information is merely for reference
+  p The following information is merely for reference.
 
   h3 Criteria and expectations
   ul
@@ -32,4 +32,3 @@ block content
     li Please understand that our resources are limited, and getting free hardware is not guaranteed.
     li Devices should be returned to Input Labs if requested.
     li Testing hardware comes without any kind of warranty, nor responsibility for damages.
-    
