Manual problems section, LED blinking -related problems

--- a/src/pug/_mixins.pug
+++ b/src/pug/_mixins.pug
@@ -25,6 +25,7 @@
     youtube: 'https://www.youtube.com/@inputlabs/videos',
     patreon: 'https://www.patreon.com/inputlabs',
     shop: 'https://inputlabs.squarespace.com',
+    ctrl_app: 'https://ctrl.inputlabs.io',
   }
 
   const redirect = {
