--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -45,6 +45,14 @@ block page
           +wikilink('calibrate') Calibrate
           +wikilink('ctrl_app') Ctrl app
 
+        h3 Common problems
+        div
+          +wikilink('problem_led') LED blinking
+          //- +wikilink('problem_soldering') Soldering problems
+          //- +wikilink('problem_fitting') Parts fitting
+          div.inactive Soldering problems #[i (soon)]
+          div.inactive Parts fitting #[i (soon)]
+
         h3 Profiles
         div
           +wikilink('profiles') About profiles
