--- a/src/pug/alpakka/manual/firmware.pug
+++ b/src/pug/alpakka/manual/firmware.pug
@@ -32,7 +32,7 @@ block content
   hr
 
   h3 After the installation
-  p If necessary, #[+a('calibrate') Calibrate] the controller.
+  p Run the controller #[+a('calibrate') calibration] if necessary (if the #[+a('problem_led') LEDs are blinking]).
 
   h3 Modify the firmware
   p Check the #[+a('dev') Developer] section.
