--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,6 +10,16 @@ block content
   hr
 
   ul
+    li #[+ax('https://hackspace.raspberrypi.com/articles/alpakka-3d-printed-controller-review') HackSpace] : Alpakka 3D printed controller review
+    ul
+      li: i "Once wireless support is added, it’ll compare favourably to any of the commercial controllers we’ve used."
+      li: i "Verdict: 8/10"
+      li: i "A great, hackable controller. We’d just like a few tolerance options."
+
+    li #[+ax('https://magpi.raspberrypi.com/issues/138') The MagPi — Issue 138, page 31] : Next Gen Retro
+    ul
+      li: i "You’ll want a controller, like this 3D-printed Alpakka, to play retro games."
+    
     li #[+ax('https://www.youtube.com/watch?v=xxRa807g54Q') RambleCan] #[em (video)] Remap All The Things!【Ctrl App / Alpakka Dual Gyro Controller】
     ul
       li: i "This was one of my major frustrations, just not being able to remap things easily on the controller"
