PR requested changes

--- a/src/pug/alpakka/manual/_manual.pug
+++ b/src/pug/alpakka/manual/_manual.pug
@@ -52,6 +52,7 @@ block page
           //- +wikilink('problem_fitting') Parts fitting
           div.inactive Soldering problems #[i (soon)]
           div.inactive Parts fitting #[i (soon)]
+          div.inactive Touch detection #[i (soon)]
 
         h3 Profiles
         div
