added Simracing-PC review

--- a/src/pug/blog/talking_about_us.pug
+++ b/src/pug/blog/talking_about_us.pug
@@ -10,6 +10,12 @@ block content
   hr
 
   ul
+    li #[+ax('https://hackspace.raspberrypi.com/articles/alpakka-3d-printed-controller-review') Simracing-PC] : DIY project: Alpakka controller by Input Labs
+    ul
+      li: i "The central element around the Alpakka controller is the community."
+      li: i " The two gyrto-sensors work much(!) more precisely than you know it from the gyro-control in Mario Kart, for example. There is also no noticeable input lag, which makes the operation very comfortable."
+      li: i "Especially for sim racers, it clearly stands out from the many other standard controllers and is a lot of fun."
+
     li #[+ax('https://hackspace.raspberrypi.com/articles/alpakka-3d-printed-controller-review') HackSpace] : Alpakka 3D printed controller review
     ul
       li: i "Once wireless support is added, it’ll compare favourably to any of the commercial controllers we’ve used."
